Update calculation code

--- a/01-calculation.ipynb
+++ b/01-calculation.ipynb
@@ -17,10 +17,10 @@
     "from pathlib import Path\n",
     "import time\n",
     "import datetime\n",
-    "\n",
     "import pandas as pd\n",
     "import requests\n",
-    "from wmfdata import hive, spark\n",
+    "from wmfdata import hive\n",
+    "from wmfdata import spark \n",
     "from wmfdata.utils import print_err, pd_display_all"
    ]
   },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        " 'metrics_cur_month': 3}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -133,47 +133,11 @@
      "output_type": "stream",
      "text": [
       "Running structured_data_used on spark...\n",
-      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        month  structured_data_used\n",
-      "0  2022-03-01             127991760\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n",
       "Running wikidata_items on spark...\n",
-      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        month  wikidata_items\n",
-      "0  2022-03-01        96647383\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n",
       "Running wikidata_items_being_reused on spark...\n",
       "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        month  wikidata_items_being_reused\n",
-      "0  2022-03-01                     20647318\n"
      ]
     }
    ],
@@ -183,7 +147,6 @@
     "        \"file\": \"queries/structured_data_used.hql\",\n",
     "        \"engine\": \"spark\"\n",
     "    },\n",
-    "    \n",
     "    \"wikidata_items\": {\n",
     "        \"file\": \"queries/wikidata_items.hql\",\n",
     "        \"engine\": \"spark\"\n",
@@ -192,6 +155,7 @@
     "        \"file\": \"queries/wikidata_items_being_reused.hql\",\n",
     "        \"engine\": \"spark\"\n",
     "    }\n",
+    "    \n",
     "       \n",
     "}\n",
     "\n",
@@ -205,7 +169,6 @@
     "        result = mariadb.run(query)\n",
     "    elif engine == \"spark\":\n",
     "        result = spark.run(query)\n",
-    "        print(result)\n",
     "    else:\n",
     "        raise ValueError(\"Unknown engine specified.\") \n",
     "    \n",
@@ -215,7 +178,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\"num_commons_files_used_content_pages\": {\n",
+    "#        \"file\": \"queries/num_commons_files.hql\",\n",
+    "#        \"engine\": \"spark\"\n",
+    "#    },\n",
+    "\n",
+    "\n",
+    "\n",
+    "num_commons_files_query = \"\"\" \n",
+    "WITH\n",
+    "\n",
+    "    wiki_content_namespaces as (\n",
+    "        select\n",
+    "            dbname,\n",
+    "            namespace\n",
+    "        FROM\n",
+    "            wmf_raw.mediawiki_project_namespace_map\n",
+    "        WHERE\n",
+    "            namespace_is_content = 1\n",
+    "            AND snapshot = '{metrics_month}'\n",
+    "    )\n",
+    "\n",
+    "   \n",
+    "        SELECT\n",
+    "            '{metrics_month_first_day}' AS month,\n",
+    "            COUNT(DISTINCT il_to) AS num_commons_files_used_content_pages\n",
+    "        FROM\n",
+    "            wmf_raw.mediawiki_imagelinks as m\n",
+    "            INNER JOIN wiki_content_namespaces AS ns\n",
+    "                ON ( ns.namespace = m.il_from_namespace)\n",
+    "                AND ns.dbname = m.wiki_db\n",
+    "        WHERE\n",
+    "            m.snapshot = '{metrics_month}'\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,150 +232,10 @@
     }
    ],
    "source": [
-    "#\"num_commons_files_used_content_pages\": {\n",
-    "#        \"file\": \"queries/num_commons_files.hql\",\n",
-    "#        \"engine\": \"spark\"\n",
-    "#    },\n",
+    "#num_commons_files_used_content_pages = spark.sql(num_commons_files_query.format(**date_params)).toPandas()\n",
+    "#merge_in(mce)\n",
     "\n",
-    "\n",
-    "\n",
-    "num_commons_files_used_content_pages = spark.run(\"\"\" \n",
-    "\n",
-    "WITH\n",
-    "\n",
-    "    wiki_content_namespaces as (\n",
-    "        select\n",
-    "            dbname,\n",
-    "            namespace\n",
-    "        FROM\n",
-    "            wmf_raw.mediawiki_project_namespace_map\n",
-    "        WHERE\n",
-    "            namespace_is_content = 1\n",
-    "            AND snapshot = '2022-03'\n",
-    "    )\n",
-    "\n",
-    "   \n",
-    "        SELECT\n",
-    "            '2022-03-01' AS month,\n",
-    "            COUNT(DISTINCT il_to) AS num_commons_files_used_content_pages\n",
-    "        FROM\n",
-    "            wmf_raw.mediawiki_imagelinks as m\n",
-    "            INNER JOIN wiki_content_namespaces AS ns\n",
-    "                ON ( ns.namespace = m.il_from_namespace)\n",
-    "                AND ns.dbname = m.wiki_db\n",
-    "        WHERE\n",
-    "            m.snapshot = '2022-03'\n",
-    "\n",
-    "\"\"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>num_commons_files_used_content_pages</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-03-01</td>\n",
-       "      <td>37488533</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        month  num_commons_files_used_content_pages\n",
-       "0  2022-03-01                              37488533"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num_commons_files_used_content_pages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>month</th>\n",
-       "      <th>num_commons_files_used_content_pages</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2022-02-01</td>\n",
-       "      <td>37124441</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        month  num_commons_files_used_content_pages\n",
-       "0  2022-02-01                              37124441"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#num_commons_files_used_content_pages\n",
-    "test"
+    "num_commons_files_df = spark.run(num_commons_files_query.format(**date_params))"
    ]
   },
   {
@@ -382,25 +247,174 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Assemble list of result dataframes\n",
     "results = [val[\"result\"] for _, val in queries.items()]\n",
     "\n",
     "# Merge them all, assuming that the month is the only common column\n",
-    "new_metrics = reduce(lambda l, r: pd.merge(l, r, how=\"outer\"), results)\n",
+    "new_metrics_subset = reduce(lambda l, r: pd.merge(l, r, how=\"outer\"), results)\n",
     "\n",
-    "# Set the month as an index so combine_first works properly\n",
-    "new_metrics = new_metrics.set_index(\"month\").sort_index()"
+    "#add in num_commons_files_used_content_pages\n",
+    "new_metrics_prep1 = pd.concat([new_metrics_subset, num_commons_files_df['num_commons_files_used_content_pages']], axis=1)\n",
+    "\n",
+    "#reorder columns \n",
+    "new_metrics_prep = new_metrics_prep1[['month', 'structured_data_used', 'num_commons_files_used_content_pages','wikidata_items']]\n",
+    "\n",
+    "#Set the month as an index so combine_first works properly\n",
+    "new_metrics = new_metrics_prep.set_index(\"month\").sort_index()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_commons_files_used_content_pages</th>\n",
+       "      <th>structured_data_used</th>\n",
+       "      <th>wikidata_items</th>\n",
+       "      <th>wikidata_items_being_reused</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-06-01</th>\n",
+       "      <td>33484828.0</td>\n",
+       "      <td>117956153.0</td>\n",
+       "      <td>93525712.0</td>\n",
+       "      <td>19379045.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-07-01</th>\n",
+       "      <td>33853754.0</td>\n",
+       "      <td>118873343.0</td>\n",
+       "      <td>93808863.0</td>\n",
+       "      <td>19464104.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-01</th>\n",
+       "      <td>35339547.0</td>\n",
+       "      <td>120411293.0</td>\n",
+       "      <td>94347261.0</td>\n",
+       "      <td>19540328.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-09-01</th>\n",
+       "      <td>35748687.0</td>\n",
+       "      <td>121413643.0</td>\n",
+       "      <td>94646283.0</td>\n",
+       "      <td>19640044.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-10-01</th>\n",
+       "      <td>36017280.0</td>\n",
+       "      <td>123036144.0</td>\n",
+       "      <td>95086219.0</td>\n",
+       "      <td>19801319.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-11-01</th>\n",
+       "      <td>36208503.0</td>\n",
+       "      <td>123918750.0</td>\n",
+       "      <td>95420570.0</td>\n",
+       "      <td>20031718.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-12-01</th>\n",
+       "      <td>36843454.0</td>\n",
+       "      <td>124842611.0</td>\n",
+       "      <td>95826220.0</td>\n",
+       "      <td>20161422.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-01-01</th>\n",
+       "      <td>37096017.0</td>\n",
+       "      <td>125887906.0</td>\n",
+       "      <td>96153653.0</td>\n",
+       "      <td>20266273.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-02-01</th>\n",
+       "      <td>37124441.0</td>\n",
+       "      <td>127025510.0</td>\n",
+       "      <td>96332960.0</td>\n",
+       "      <td>20548393.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-03-01</th>\n",
+       "      <td>37488533.0</td>\n",
+       "      <td>127991760.0</td>\n",
+       "      <td>96647383.0</td>\n",
+       "      <td>20647318.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            num_commons_files_used_content_pages  structured_data_used  \\\n",
+       "month                                                                    \n",
+       "2021-06-01  33484828.0                            117956153.0            \n",
+       "2021-07-01  33853754.0                            118873343.0            \n",
+       "2021-08-01  35339547.0                            120411293.0            \n",
+       "2021-09-01  35748687.0                            121413643.0            \n",
+       "2021-10-01  36017280.0                            123036144.0            \n",
+       "2021-11-01  36208503.0                            123918750.0            \n",
+       "2021-12-01  36843454.0                            124842611.0            \n",
+       "2022-01-01  37096017.0                            125887906.0            \n",
+       "2022-02-01  37124441.0                            127025510.0            \n",
+       "2022-03-01  37488533.0                            127991760.0            \n",
+       "\n",
+       "            wikidata_items  wikidata_items_being_reused  \n",
+       "month                                                    \n",
+       "2021-06-01  93525712.0      19379045.0                   \n",
+       "2021-07-01  93808863.0      19464104.0                   \n",
+       "2021-08-01  94347261.0      19540328.0                   \n",
+       "2021-09-01  94646283.0      19640044.0                   \n",
+       "2021-10-01  95086219.0      19801319.0                   \n",
+       "2021-11-01  95420570.0      20031718.0                   \n",
+       "2021-12-01  95826220.0      20161422.0                   \n",
+       "2022-01-01  96153653.0      20266273.0                   \n",
+       "2022-02-01  96332960.0      20548393.0                   \n",
+       "2022-03-01  96647383.0      20647318.0                   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "if old_metrics is None:\n",
     "    metrics = new_metrics\n",
