Update April 2022 metrics

--- a/01-calculation.ipynb
+++ b/01-calculation.ipynb
@@ -90,31 +90,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'mediawiki_history_snapshot': '2022-03',\n",
-       " 'metrics_month': '2022-03',\n",
-       " 'metrics_month_first_day': '2022-03-01',\n",
-       " 'metrics_month_last_day': '2022-03-31',\n",
-       " 'metrics_year': 2022,\n",
-       " 'metrics_cur_month': 3}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "date_params"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -123,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
@@ -178,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +186,7 @@
     "            wmf_raw.mediawiki_imagelinks as m\n",
     "            INNER JOIN wiki_content_namespaces AS ns\n",
     "                ON ( ns.namespace = m.il_from_namespace)\n",
-    "                AND ns.dbname = m.wiki_db\n",
+    "                AND ns.dbname = m.wiki_db -- recommended by Mikhail to properly run the code\n",
     "        WHERE\n",
     "            m.snapshot = '{metrics_month}'\n",
     "\n",
@@ -220,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -271,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -309,13 +284,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-06-01</th>\n",
-       "      <td>33484828.0</td>\n",
-       "      <td>117956153.0</td>\n",
-       "      <td>93525712.0</td>\n",
-       "      <td>19379045.0</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-07-01</th>\n",
        "      <td>33853754.0</td>\n",
@@ -379,6 +347,13 @@
        "      <td>96647383.0</td>\n",
        "      <td>20647318.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-04-01</th>\n",
+       "      <td>37898030.0</td>\n",
+       "      <td>128971911.0</td>\n",
+       "      <td>96908499.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -386,7 +361,6 @@
       "text/plain": [
        "            num_commons_files_used_content_pages  structured_data_used  \\\n",
        "month                                                                    \n",
-       "2021-06-01  33484828.0                            117956153.0            \n",
        "2021-07-01  33853754.0                            118873343.0            \n",
        "2021-08-01  35339547.0                            120411293.0            \n",
        "2021-09-01  35748687.0                            121413643.0            \n",
@@ -396,10 +370,10 @@
        "2022-01-01  37096017.0                            125887906.0            \n",
        "2022-02-01  37124441.0                            127025510.0            \n",
        "2022-03-01  37488533.0                            127991760.0            \n",
+       "2022-04-01  37898030.0                            128971911.0            \n",
        "\n",
        "            wikidata_items  wikidata_items_being_reused  \n",
        "month                                                    \n",
-       "2021-06-01  93525712.0      19379045.0                   \n",
        "2021-07-01  93808863.0      19464104.0                   \n",
        "2021-08-01  94347261.0      19540328.0                   \n",
        "2021-09-01  94646283.0      19640044.0                   \n",
@@ -408,7 +382,8 @@
        "2021-12-01  95826220.0      20161422.0                   \n",
        "2022-01-01  96153653.0      20266273.0                   \n",
        "2022-02-01  96332960.0      20548393.0                   \n",
-       "2022-03-01  96647383.0      20647318.0                   "
+       "2022-03-01  96647383.0      20647318.0                   \n",
+       "2022-04-01  96908499.0     NaN                           "
       ]
      },
      "metadata": {},
@@ -426,7 +401,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get last value & replace as needed\n",
+    "metrics.iloc[-1,c.columns.get_loc(\"wikidata_items_being_reused\")] = #missing value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
