Update May 2022 metrics

--- a/01-calculation.ipynb
+++ b/01-calculation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {
     "tags": []
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -284,13 +284,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2021-07-01</th>\n",
-       "      <td>33853754.0</td>\n",
-       "      <td>118873343.0</td>\n",
-       "      <td>93808863.0</td>\n",
-       "      <td>19464104.0</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>2021-08-01</th>\n",
        "      <td>35339547.0</td>\n",
@@ -352,6 +345,13 @@
        "      <td>37898030.0</td>\n",
        "      <td>128971911.0</td>\n",
        "      <td>96908499.0</td>\n",
+       "      <td>20737630.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-05-01</th>\n",
+       "      <td>38288776.0</td>\n",
+       "      <td>129875219.0</td>\n",
+       "      <td>97267609.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -361,7 +361,6 @@
       "text/plain": [
        "            num_commons_files_used_content_pages  structured_data_used  \\\n",
        "month                                                                    \n",
-       "2021-07-01  33853754.0                            118873343.0            \n",
        "2021-08-01  35339547.0                            120411293.0            \n",
        "2021-09-01  35748687.0                            121413643.0            \n",
        "2021-10-01  36017280.0                            123036144.0            \n",
@@ -371,10 +370,10 @@
        "2022-02-01  37124441.0                            127025510.0            \n",
        "2022-03-01  37488533.0                            127991760.0            \n",
        "2022-04-01  37898030.0                            128971911.0            \n",
+       "2022-05-01  38288776.0                            129875219.0            \n",
        "\n",
        "            wikidata_items  wikidata_items_being_reused  \n",
        "month                                                    \n",
-       "2021-07-01  93808863.0      19464104.0                   \n",
        "2021-08-01  94347261.0      19540328.0                   \n",
        "2021-09-01  94646283.0      19640044.0                   \n",
        "2021-10-01  95086219.0      19801319.0                   \n",
@@ -383,7 +382,8 @@
        "2022-01-01  96153653.0      20266273.0                   \n",
        "2022-02-01  96332960.0      20548393.0                   \n",
        "2022-03-01  96647383.0      20647318.0                   \n",
-       "2022-04-01  96908499.0     NaN                           "
+       "2022-04-01  96908499.0      20737630.0                   \n",
+       "2022-05-01  97267609.0     NaN                           "
       ]
      },
      "metadata": {},
@@ -401,17 +401,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get last value & replace as needed\n",
-    "metrics.iloc[-1,c.columns.get_loc(\"wikidata_items_being_reused\")] = #missing value"
+    "#TODO - this cell and the two below are easy workarounds. \n",
+    "#fix, make all of the queries on this notebook stand alone queries and merge the results into a single row that is concatenated to the metrics sheet. \n",
+    "wikidata_items_being_reused_query = \"\"\" \n",
+    "WITH namespaces AS (\n",
+    "      SELECT\n",
+    "        dbname AS wiki_db,\n",
+    "        namespace AS page_namespace\n",
+    "      FROM wmf_raw.mediawiki_project_namespace_map\n",
+    "      WHERE\n",
+    "        snapshot = '{metrics_month}'\n",
+    "        AND namespace_is_content = 1\n",
+    "        AND dbname <> 'wikidatawiki'\n",
+    "    ),\n",
+    "    content_pages AS (\n",
+    "      SELECT\n",
+    "         p.page_id AS page_id,\n",
+    "         p.wiki_db AS wiki_db\n",
+    "      FROM wmf_raw.mediawiki_page p\n",
+    "      INNER JOIN namespaces ns\n",
+    "        ON (p.wiki_db = ns.wiki_db\n",
+    "            AND p.page_namespace = ns.page_namespace)\n",
+    "      WHERE\n",
+    "        p.snapshot = '{metrics_month}'\n",
+    "        AND NOT p.page_is_redirect\n",
+    "    )\n",
+    "    SELECT\n",
+    "        '{metrics_month_first_day}' AS month,\n",
+    "        COUNT(DISTINCT(wbc.eu_entity_id)) AS wikidata_items_being_reused\n",
+    "      FROM wmf_raw.mediawiki_wbc_entity_usage wbc\n",
+    "      INNER JOIN content_pages p\n",
+    "        ON (wbc.eu_page_id = p.page_id\n",
+    "            AND wbc.wiki_db = p.wiki_db)\n",
+    "      WHERE\n",
+    "        wbc.snapshot = '{metrics_month}'\n",
+    "        AND wbc.eu_aspect != 'S'\n",
+    "        AND wbc.eu_entity_id LIKE 'Q%'\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "PySpark executors will use /usr/lib/anaconda-wmf/bin/python3.\n"
+     ]
+    }
+   ],
+   "source": [
+    "wikidata_items_being_reused_df = spark.run(wikidata_items_being_reused_query.format(**date_params))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get last value & replace as needed\n",
+    "metrics.iloc[-1,metrics.columns.get_loc(\"wikidata_items_being_reused\")] = wikidata_items_being_reused_df['wikidata_items_being_reused'][0] #missing value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
